# DeepDeblur3D

./: .gitignore  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  environment.yml  main.py  manifest.index_log.jsonl  manifest.parquet  manifest.parquet.bak  manifest_export.xlsx  pyproject.toml  test.ipynb  train.ipynb  trainbabytrain.ipynb
.ipynb_checkpoints/: Untitled3-checkpoint.ipynb
.virtual_documents/: DeepDeBlur3D-Dataset.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  test.ipynb  train.ipynb  trainbabytrain.ipynb
data/: Dataset.xlsx
env/: requirements.txt
mlruns/0/: meta.yaml
mlruns/208247410941120697/: meta.yaml
mlruns/208247410941120697/22431a4c53314ede92338d0b0fa78d89/: meta.yaml
mlruns/208247410941120697/22431a4c53314ede92338d0b0fa78d89/artifacts/: env.json
mlruns/208247410941120697/22431a4c53314ede92338d0b0fa78d89/params/: model  patch_size
mlruns/208247410941120697/7a2256f38d8349ff90e7e1a026288376/: meta.yaml
scripts/: convert_manifest_sequence_to_single_tifs.py  convert_manifest_to_excel.py  index_from_excel.py  preview_blur.py  train.py
src/deblur3d/: __init__.py
src/deblur3d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/deblur3d/app/: __init__.py  gui.py
src/deblur3d/data/: __init__.py  dataset.py  split_train_val_hash.py
src/deblur3d/infer/: __init__.py  baselines3d.py
src/deblur3d/losses/: losses.py
src/deblur3d/metrics/: no_ref3d.py
src/deblur3d/models/: __init__.py
src/deblur3d/transforms/: __init__.py  gaussian_iso_blur.py
src/deblur3d/viz/: napari_tools.py
tests/: test_blur_shapes.py  test_dataset.py
(+5 files in other folders)
